# telegram-example-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
models/: __init__.py  webhook.py
utils/: __init__.py  auth.py  config.py  telegram_handlers.py
